--- a/words.html
+++ b/words.html
@@ -3,6 +3,171 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>📖 أكبر مجموعة كلمات وجمل ألمانية مترجمة</title>
+<style>
+body {
+   font-family: Arial, Helvetica, sans-serif;
+   background: #f9f9f9;
+   margin: 0;
+   padding: 20px;
+   direction: rtl;
+   text-align: center;
+   color: #222;
+}
+h1, h2 {
+   color: #0077cc;
+   margin-bottom: 20px;
+}
+table {
+   width: 100%;
+   border-collapse: collapse;
+   background: #fff;
+   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+   margin-bottom: 30px;
+}
+th, td {
+   padding: 12px;
+   border: 1px solid #ddd;
+   font-size: 16px;
+}
+th {
+   background: #0077cc;
+   color: #fff;
+}
+tr:nth-child(even) {
+   background: #f2f2f2;
+}
+@media (max-width: 768px) {
+   table, thead, tbody, th, td, tr {
+     display: block;
+     width: 100%;
+   }
+   tr {
+     margin-bottom: 15px;
+   }
+   td {
+     text-align: right;
+     padding-left: 50%;
+     position: relative;
+   }
+   td:before {
+     position: absolute;
+     left: 10px;
+     width: 45%;
+     white-space: nowrap;
+     font-weight: bold;
+     color: #555;
+   }
+   td:nth-of-type(1):before { content: "Deutsch:"; }
+   td:nth-of-type(2):before { content: "عربي:"; }
+}
+a {
+   display: inline-block;
+   margin-top: 20px;
+   text-decoration: none;
+   background: #0077cc;
+   color: #fff;
+   padding: 10px 15px;
+   border-radius: 5px;
+}
+a:hover {
+   background: #005fa3;
+}
+</style>
+</head>
+<body>
+<h1>📖 أكبر مجموعة كلمات وجمل ألمانية مترجمة</h1>
+<!-- جدول الكلمات الأساسية -->
+<h2>🔹 كلمات أساسية</h2>
+<table>
+<thead>
+<tr>
+<th>Deutsch</th>
+<th>عربي</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Haus</td><td>بيت</td></tr>
+<tr><td>Auto</td><td>سيارة</td></tr>
+<tr><td>Buch</td><td>كتاب</td></tr>
+<tr><td>Freund</td><td>صديق</td></tr>
+<tr><td>Schule</td><td>مدرسة</td></tr>
+<tr><td>Wasser</td><td>ماء</td></tr>
+<tr><td>Brot</td><td>خبز</td></tr>
+<tr><td>Milch</td><td>حليب</td></tr>
+<tr><td>Apfel</td><td>تفاحة</td></tr>
+<tr><td>Banane</td><td>موزة</td></tr>
+<tr><td>Hund</td><td>كلب</td></tr>
+<tr><td>Katze</td><td>قطة</td></tr>
+<tr><td>Tisch</td><td>طاولة</td></tr>
+<tr><td>Stuhl</td><td>كرسي</td></tr>
+<tr><td>Fenster</td><td>نافذة</td></tr>
+<tr><td>Tür</td><td>باب</td></tr>
+<tr><td>Stadt</td><td>مدينة</td></tr>
+<tr><td>Dorf</td><td>قرية</td></tr>
+<tr><td>Zug</td><td>قطار</td></tr>
+<tr><td>Flugzeug</td><td>طائرة</td></tr>
+<tr><td>Bus</td><td>باص</td></tr>
+<tr><td>Arzt</td><td>طبيب</td></tr>
+<tr><td>Lehrer</td><td>معلم</td></tr>
+<tr><td>Schüler</td><td>طالب</td></tr>
+<tr><td>Universität</td><td>جامعة</td></tr>
+<tr><td>Arbeit</td><td>عمل</td></tr>
+<tr><td>Büro</td><td>مكتب</td></tr>
+<tr><td>Geld</td><td>مال</td></tr>
+<tr><td>Bank</td><td>بنك</td></tr>
+<tr><td>Laden</td><td>متجر</td></tr>
+<tr><td>Küche</td><td>مطبخ</td></tr>
+<tr><td>Bett</td><td>سرير</td></tr>
+<tr><td>Zimmer</td><td>غرفة</td></tr>
+<tr><td>Wohnung</td><td>شقة</td></tr>
+<tr><td>Hausaufgabe</td><td>واجب منزلي</td></tr>
+<tr><td>Kleid</td><td>فستان</td></tr>
+<tr><td>Hose</td><td>بنطال</td></tr>
+<tr><td>Schuhe</td><td>أحذية</td></tr>
+<tr><td>Jacke</td><td>معطف</td></tr>
+<tr><td>Hemd</td><td>قميص</td></tr>
+<tr><td>Kind</td><td>طفل</td></tr>
+<tr><td>Mann</td><td>رجل</td></tr>
+<tr><td>Frau</td><td>امرأة</td></tr>
+<tr><td>Eltern</td><td>والدان</td></tr>
+<tr><td>Bruder</td><td>أخ</td></tr>
+<tr><td>Schwester</td><td>أخت</td></tr>
+<tr><td>Onkel</td><td>عم / خال</td></tr>
+<tr><td>Tante</td><td>عمة / خالة</td></tr>
+<tr><td>Oma</td><td>جدة</td></tr>
+<tr><td>Opa</td><td>جد</td></tr>
+<tr><td>Sommer</td><td>صيف</td></tr>
+<tr><td>Winter</td><td>شتاء</td></tr>
+<tr><td>Herbst</td><td>خريف</td></tr>
+<tr><td>Frühling</td><td>ربيع</td></tr>
+<tr><td>Montag</td><td>الإثنين</td></tr>
+<tr><td>Dienstag</td><td>الثلاثاء</td></tr>
+<tr><td>Mittwoch</td><td>الأربعاء</td></tr>
+<tr><td>Donnerstag</td><td>الخميس</td></tr>
+<tr><td>Freitag</td><td>الجمعة</td></tr>
+<tr><td>Samstag</td><td>السبت</td></tr>
+<tr><td>Sonntag</td><td>الأحد</td></tr>
+<tr><td>Januar</td><td>يناير</td></tr>
+<tr><td>Februar</td><td>فبراير</td></tr>
+<tr><td>März</td><td>مارس</td></tr>
+<tr><td>April</td><td>أبريل</td></tr>
+<tr><td>Mai</td><td>مايو</td></tr>
+<tr><td>Juni</td><td>يونيو</td></tr>
+<tr><td>Juli</td><td>يوليو</td></tr>
+<tr><td>August</td><td>أغسطس</td></tr>
+<tr><td>September</td><td>سبتمبر</td></tr>
+<tr><td>Oktober</td><td>أكتوبر</td></tr>
+<tr><td>November</td><td>نوفمبر</td></tr>
+<tr><td>Dezember</td><td>ديسمبر</td></tr>
+<tr><td>Heute</td><td>اليوم</td></tr>
+<tr><td>Morgen</td><td>غدًا</td></tr>
+<tr><td>Gestern</td><td>أمس</td></tr>
+
+<!DOCTYPE html>
+<html lang="ar">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📖 كلمات وجمل ألمانية مترجمة</title>
 <style>
  body {
