--- a/words.html
+++ b/words.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📖 أكبر مجموعة كلمات وجمل ألمانية مترجمة</title>
+<title>📖 كلمات وجمل ألمانية مترجمة</title>
 <style>
 body {
    font-family: Arial, Helvetica, sans-serif;
@@ -76,7 +76,7 @@ a:hover {
 </style>
 </head>
 <body>
-<h1>📖 أكبر مجموعة كلمات وجمل ألمانية مترجمة</h1>
+<h1>  </h1>
 <!-- جدول الكلمات الأساسية -->
 <h2>🔹 كلمات أساسية</h2>
 <table>
@@ -168,7 +168,7 @@ a:hover {
 <html lang="ar">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📖 كلمات وجمل ألمانية مترجمة</title>
+<title></title>
 <style>
  body {
    font-family: Arial, Helvetica, sans-serif;
@@ -240,7 +240,7 @@ a:hover {
 </style>
 </head>
 <body>
-<h1>📖 أكثر من 200 كلمة وجملة ألمانية مترجمة</h1>
+<h1>  </h1>
 <table>
 <thead>
 <tr>
