--- a/words.html
+++ b/words.html
@@ -338,6 +338,95 @@ a:hover {
 <tr><td>Ich mache ein Picknick</td><td>أقوم بنزهة على العشب</td></tr>
 <tr><td>Ich fahre Ski</td><td>أمارس التزلج</td></tr>
 </tbody>
+   !-- جدول الجمل اليومية والأنشطة -->
+<h2>🔹 جمل يومية وأنشطة</h2>
+<table>
+<thead>
+<tr>
+<th>Deutsch</th>
+<th>عربي</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Hallo</td><td>مرحبًا</td></tr>
+<tr><td>Guten Morgen</td><td>صباح الخير</td></tr>
+<tr><td>Guten Abend</td><td>مساء الخير</td></tr>
+<tr><td>Wie geht es dir?</td><td>كيف حالك؟</td></tr>
+<tr><td>Mir geht es gut</td><td>أنا بخير</td></tr>
+<tr><td>Danke</td><td>شكرًا</td></tr>
+<tr><td>Bitte</td><td>من فضلك / على الرحب</td></tr>
+<tr><td>Entschuldigung</td><td>عذرًا / آسف</td></tr>
+<tr><td>Ich verstehe nicht</td><td>أنا لا أفهم</td></tr>
+<tr><td>Sprechen Sie Englisch?</td><td>هل تتحدث الإنجليزية؟</td></tr>
+<tr><td>Ich gehe einkaufen</td><td>أنا ذاهب للتسوق</td></tr>
+<tr><td>Ich gehe zur Arbeit</td><td>أنا ذاهب إلى العمل</td></tr>
+<tr><td>Ich lerne Deutsch</td><td>أنا أتعلم الألمانية</td></tr>
+<tr><td>Ich spiele Fußball</td><td>ألعب كرة القدم</td></tr>
+<tr><td>Ich lese ein Buch</td><td>أقرأ كتابًا</td></tr>
+<tr><td>Ich schwimme</td><td>أسبح</td></tr>
+<tr><td>Ich koche Abendessen</td><td>أطبخ العشاء</td></tr>
+<tr><td>Es ist kalt</td><td>الجو بارد</td></tr>
+<tr><td>Es ist heiß</td><td>الجو حار</td></tr>
+<tr><td>Ich gehe joggen</td><td>أنا أذهب للجري</td></tr>
+<tr><td>Ich fahre Fahrrad</td><td>أركب الدراجة</td></tr>
+<tr><td>Ich höre Musik</td><td>أستمع إلى الموسيقى</td></tr>
+<tr><td>Ich sehe einen Film</td><td>أشاهد فيلمًا</td></tr>
+<tr><td>Ich treffe meine Freunde</td><td>ألتقي بأصدقائي</td></tr>
+<tr><td>Ich mache Sport</td><td>أمارس الرياضة</td></tr>
+<tr><td>Ich gehe ins Kino</td><td>أذهب إلى السينما</td></tr>
+<tr><td>Ich besuche meine Familie</td><td>أزور عائلتي</td></tr>
+<tr><td>Ich fahre nach München</td><td>أنا مسافر إلى ميونيخ</td></tr>
+<tr><td>Ich bleibe zu Hause</td><td>أبقى في المنزل</td></tr>
+</tbody>
+</table>
+<!-- جدول السفر والهوايات -->
+<h2>🔹 السفر والهوايات</h2>
+<table>
+<thead>
+<tr>
+<th>Deutsch</th>
+<th>عربي</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Ich packe meinen Koffer</td><td>أجهز حقيبتي</td></tr>
+<tr><td>Ich checke im Hotel ein</td><td>أسجل الوصول في الفندق</td></tr>
+<tr><td>Ich gehe zum Strand</td><td>أذهب إلى الشاطئ</td></tr>
+<tr><td>Ich schwimme im See</td><td>أسبح في البحيرة</td></tr>
+<tr><td>Ich mache ein Picknick</td><td>أقوم بنزهة على العشب</td></tr>
+<tr><td>Ich fahre Ski</td><td>أمارس التزلج</td></tr>
+<tr><td>Ich besuche Museen</td><td>أزور المتاحف</td></tr>
+<tr><td>Ich fotografiere die Landschaft</td><td>أصور المناظر الطبيعية</td></tr>
+<tr><td>Ich lese Reiseführer</td><td>أقرأ دليل السفر</td></tr>
+<tr><td>Ich probiere lokale Spezialitäten</td><td>أجرب المأكولات المحلية</td></tr>
+</tbody>
+</table>
+<!-- جدول البريد الإلكتروني -->
+<h2>📧 أمثلة على البريد الإلكتروني بالألمانية</h2>
+<table>
+<thead>
+<tr>
+<th>Deutsch</th>
+<th>عربي</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Sehr geehrte Frau Müller,</td><td>عزيزتي السيدة مولر،</td></tr>
+<tr><td>Sehr geehrter Herr Schmidt,</td><td>عزيزي السيد شميت،</td></tr>
+<tr><td>Mit freundlichen Grüßen,</td><td>مع أطيب التحيات،</td></tr>
+<tr><td>Ich schreibe Ihnen bezüglich...</td><td>أكتب إليكم بخصوص...</td></tr>
+<tr><td>Vielen Dank für Ihre Antwort.</td><td>شكرًا جزيلاً على ردكم.</td></tr>
+<tr><td>Ich freue mich auf Ihre Rückmeldung.</td><td>أتطلع إلى ردكم.</td></tr>
+<tr><td>Bitte bestätigen Sie den Erhalt.</td><td>يرجى تأكيد الاستلام.</td></tr>
+<tr><td>Ich habe Ihre E-Mail erhalten.</td><td>لقد استلمت بريدك الإلكتروني.</td></tr>
+<tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
+<tr><td>Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
+</tbody>
+</table>
+<p style="text-align:center;">>
+</p>
+</body>
+</html>
 </table>
 <p style="text-align:center;">
 <a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
