--- a/words.html
+++ b/words.html
@@ -416,14 +416,14 @@ a:hover {
 <tr><td>Mit freundlichen Grüßen,</td><td>مع أطيب التحيات،</td></tr>
 <tr><td>Ich schreibe Ihnen bezüglich...</td><td>أكتب إليكم بخصوص...</td></tr>
 <tr><td>Vielen Dank für Ihre Antwort.</td><td>شكرًا جزيلاً على ردكم.</td></tr>
-<tr><td>Ich freue mich auf Ihre Rückmeldung.</td><td>أتطلع إلى ردكم.</td></tr>
+<tr><td> Ich freue mich auf Ihre Rückmeldung.</td><td>أتطلع إلى ردكم.</td></tr>
 <tr><td>Bitte bestätigen Sie den Erhalt.</td><td>يرجى تأكيد الاستلام.</td></tr>
 <tr><td>Ich habe Ihre E-Mail erhalten.</td><td>لقد استلمت بريدك الإلكتروني.</td></tr>
 <tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
-<tr><td>Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
+<tr><td> Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
 </tbody>
 </table>
-<p style="text-align:center;">>
+<p style="text-align:center;">
 </p>
 </body>
 </html>
