--- a/words.html
+++ b/words.html
@@ -422,7 +422,69 @@ a:hover {
 <tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
 <tr><td> Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
 </tbody>
+</table><tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
+<tr><td>Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
+<tr><td>Ich packe meinen Koffer</td><td>أجهز حقيبتي</td></tr>
+<tr><td>Ich checke im Hotel ein</td><td>أسجل الوصول في الفندق</td></tr>
+<tr><td>Ich gehe zum Strand</td><td>أذهب إلى الشاطئ</td></tr>
+<tr><td>Ich schwimme im See</td><td>أسبح في البحيرة</td></tr>
+<tr><td>Ich mache ein Picknick</td><td>أقوم بنزهة على العشب</td></tr>
+<tr><td>Ich fahre Ski</td><td>أمارس التزلج</td></tr>
+<tr><td>Ich besuche Museen</td><td>أزور المتاحف</td></tr>
+<tr><td>Ich fotografiere die Landschaft</td><td>أصور المناظر الطبيعية</td></tr>
+<tr><td>Ich lese Reiseführer</td><td>أقرأ دليل السفر</td></tr>
+<tr><td>Ich probiere lokale Spezialitäten</td><td>أجرب المأكولات المحلية</td></tr>
+<tr><td>Ich kaufe Souvenirs</td><td>أشتري التذكارات</td></tr>
+<tr><td>Ich plane meine Reise</td><td>أخطط لرحلتي</td></tr>
+<tr><td>Ich buche ein Hotel</td><td>أحجز فندقًا</td></tr>
+<tr><td>Ich nehme ein Taxi</td><td>أستقل سيارة أجرة</td></tr>
+<tr><td>Ich bestelle Essen</td><td>أطلب الطعام</td></tr>
+<tr><td>Ich trinke Kaffee</td><td>أشرب القهوة</td></tr>
+<tr><td>Ich esse Frühstück</td><td>أتناول الفطور</td></tr>
+<tr><td>Ich esse Mittagessen</td><td>أتناول الغداء</td></tr>
+<tr><td>Ich esse Abendessen</td><td>أتناول العشاء</td></tr>
+<tr><td>Ich gehe spazieren</td><td>أذهب في نزهة</td></tr>
+<tr><td>Ich lerne neue Wörter</td><td>أتعلم كلمات جديدة</td></tr>
+<tr><td>Ich schreibe E-Mails</td><td>أكتب رسائل إلكترونية</td></tr>
+<tr><td>Ich telefoniere mit Freunden</td><td>أتحدث مع أصدقائي عبر الهاتف</td></tr>
+<tr><td>Ich höre Podcasts</td><td>أستمع إلى البودكاست</td></tr>
+<tr><td>Ich sehe Serien</td><td>أشاهد مسلسلات</td></tr>
+<tr><td>Ich mache Yoga</td><td>أمارس اليوغا</td></tr>
+<tr><td>Ich meditiere</td><td>أمارس التأمل</td></tr>
+<tr><td>Ich fahre Auto</td><td>أقود السيارة</td></tr>
+<tr><td>Ich nehme den Bus</td><td>أستقل الحافلة</td></tr>
+<tr><td>Ich fahre Zug</td><td>أستقل القطار</td></tr>
+<tr><td>Ich fliege nach Berlin</td><td>أسافر إلى برلين</td></tr>
+<tr><td>Ich besuche Freunde</td><td>أزور الأصدقاء</td></tr>
+<tr><td>Ich gehe ins Theater</td><td>أذهب إلى المسرح</td></tr>
+<tr><td>Ich gehe ins Museum</td><td>أذهب إلى المتحف</td></tr>
+<tr><td>Ich male Bilder</td><td>أرسم لوحات</td></tr>
+<tr><td>Ich spiele Gitarre</td><td>أعزف على الجيتار</td></tr>
+<tr><td>Ich singe Lieder</td><td>أغني الأغاني</td></tr>
+<tr><td>Ich tanze</td><td>أرقص</td></tr>
+<tr><td>Ich mache Sport im Fitnessstudio</td><td>أمارس الرياضة في النادي</td></tr>
+<tr><td>Ich gehe schwimmen</td><td>أذهب للسباحة</td></tr>
+<tr><td>Ich gehe wandern</td><td>أذهب للتنزه</td></tr>
+<tr><td>Ich koche neue Rezepte</td><td>أطبخ وصفات جديدة</td></tr>
+<tr><td>Ich backe Kuchen</td><td>أخبز الكعك</td></tr>
+<tr><td>Ich trinke Tee</td><td>أشرب الشاي</td></tr>
+<tr><td>Ich esse Obst</td><td>أتناول الفاكهة</td></tr>
+<tr><td>Ich esse Gemüse</td><td>أتناول الخضار</td></tr>
+<tr><td>Ich esse Fleisch</td><td>أتناول اللحم</td></tr>
+<tr><td>Ich esse Fisch</td><td>أتناول السمك</td></tr>
+<tr><td>Ich esse Reis</td><td>أتناول الأرز</td></tr>
+<tr><td>Ich esse Brot</td><td>أتناول الخبز</td></tr>
+<tr><td>Ich esse Käse</td><td>أتناول الجبن</td></tr>
+<tr><td>Ich esse Eier</td><td>أتناول البيض</td></tr>
+<tr><td>Ich nehme Salz und Zucker</td><td>آخذ الملح والسكر</td></tr>
+<tr><td>Ich liebe dich</td><td>أحبك</td></tr>
+<tr><td>Auf Wiedersehen</td><td>إلى اللقاء</td></tr>
+<tr><td>Tschüss</td><td>وداعًا</td></tr>
+<tr><td>Bis bald</td><td>أراك قريبًا</td></tr>
+</tbody>
 </table>
+</body>
+</html>
 <p style="text-align:center;">
 </p>
 </body>
