--- a/words.html
+++ b/words.html
@@ -422,7 +422,8 @@ a:hover {
 <tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
 <tr><td> Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
 </tbody>
-</table><tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
+</table>
+<tr><td>Könnten Sie mir bitte weitere Informationen senden?</td><td>هل يمكنك إرسال مزيد من المعلومات لي؟</td></tr>
 <tr><td>Ich stehe für Fragen jederzeit zur Verfügung.</td><td>أنا متاح للإجابة على أي أسئلة في أي وقت.</td></tr>
 <tr><td>Ich packe meinen Koffer</td><td>أجهز حقيبتي</td></tr>
 <tr><td>Ich checke im Hotel ein</td><td>أسجل الوصول في الفندق</td></tr>
