Update a1_emails.htmlتحديث صفحة الإيميلات وإضافة جميع المستويات A1 - C2

--- a/a1_emails.html
+++ b/a1_emails.html
@@ -1,188 +1,86 @@
-
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>إيميل تجريبي بتصميم خرافي</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>📧 الإيميلات - تعلم الألمانية</title>
 <style>
- :root{
-   --bg1:#0f172a; --bg2:#1e293b; --acc1:#22d3ee; --acc2:#a78bfa;
-   --card-bg: rgba(255,255,255,0.10); --card-brd: rgba(255,255,255,0.25);
-   --text:#e5e7eb; --muted:#cbd5e1;
- }
- @media (prefers-color-scheme: light){
-   :root{
-     --bg1:#dbeafe; --bg2:#f5f3ff; --acc1:#0ea5e9; --acc2:#7c3aed;
-     --card-bg: rgba(255,255,255,0.75); --card-brd: rgba(0,0,0,0.08);
-     --text:#0f172a; --muted:#334155;
+   body {
+     font-family: Arial, sans-serif;
+     background: #f4f6f9;
+     margin: 0;
+     padding: 20px;
+     line-height: 1.8;
    }
- }
- *{box-sizing:border-box}
- body{
-   margin:0; font-family: "Segoe UI", Tahoma, Arial, sans-serif;
-   background: radial-gradient(1200px 800px at 20% 10%, var(--acc1), transparent 40%),
-               radial-gradient(1000px 700px at 90% 20%, var(--acc2), transparent 45%),
-               linear-gradient(135deg, var(--bg1), var(--bg2));
-   color:var(--text);
-   min-height:100vh;
-   display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
- }
- header{
-   width:100%; text-align:center; padding:40px 16px 20px;
-   position:relative; overflow:hidden;
- }
- .title{
-   font-size:clamp(28px, 6vw, 44px); margin:0 0 6px; font-weight:800; letter-spacing:.5px;
- }
- .subtitle{ margin:0; font-size:clamp(16px, 3.4vw, 20px); color:var(--muted);}
- .halo{
-   position:absolute; inset:-30% -10% auto auto; width:60vmax; height:60vmax;
-   background:radial-gradient(circle at center, rgba(255,255,255,.12), transparent 60%);
-   filter: blur(40px); pointer-events:none; transform:rotate(15deg);
- }
- main{ width:min(1100px, 92%); padding:20px 0 60px; }
- .card{
-   position:relative; border-radius:18px; padding:24px;
-   background: var(--card-bg); border:1px solid var(--card-brd);
-   box-shadow: 0 8px 40px rgba(0,0,0,.18), inset 0 1px 0 rgba(255,255,255,.08);
-   backdrop-filter: blur(10px);
-   animation: pop .6s ease both;
- }
- @keyframes pop{ from{ transform: translateY(12px); opacity:0 } to{ transform: none; opacity:1 } }
- .badge{
-   display:inline-flex; align-items:center; gap:10px;
-   background: linear-gradient(90deg, var(--acc1), var(--acc2));
-   color:#fff; padding:10px 14px; border-radius:999px; font-weight:700;
-   box-shadow: 0 6px 20px rgba(0,0,0,.18);
-   font-size:clamp(14px, 3.2vw, 16px);
- }
- .grid{
-   display:grid; gap:18px; margin-top:18px;
-   grid-template-columns: 1fr;
- }
- .row{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between}
- .row h2{ margin:10px 0 0; font-size:clamp(20px, 4.5vw, 26px)}
- .actions{ display:flex; gap:10px; flex-wrap:wrap }
- button{
-   border:1px solid var(--card-brd); background:rgba(255,255,255,.12);
-   color:var(--text); padding:10px 14px; border-radius:10px; cursor:pointer;
-   font-size:clamp(14px, 3.2vw, 16px);
-   transition:.2s transform ease, .2s background ease, .2s opacity ease;
- }
- button:hover{ transform: translateY(-1px); background: rgba(255,255,255,.18) }
- button:active{ transform: translateY(0) scale(.98) }
- .panel{
-   padding:16px 14px; border-radius:14px; border:1px dashed var(--card-brd);
-   background: rgba(255,255,255,.06);
- }
- /* اللغات */
- .de{ direction:ltr; text-align:left; }
- .ar{ direction:rtl; text-align:right; }
- .block-title{
-   margin:0 0 8px; font-weight:800; letter-spacing:.3px;
-   font-size:clamp(16px, 3.6vw, 18px); color:var(--muted);
- }
- .content{
-   font-size:clamp(18px, 4.6vw, 20px); line-height:1.9; margin:0;
-   white-space:pre-wrap;
- }
- .reasons{ margin:12px 0 0; padding:0 0 0 18px; }
- .reasons li{ margin:6px 0; font-size:clamp(16px, 4vw, 18px); }
- footer{ text-align:center; color:var(--muted); margin-top:22px; font-size:clamp(12px, 3vw, 14px) }
- /* شارة متحركة لطيفة */
- .shine{
-   position:relative; overflow:hidden;
- }
- .shine::after{
-   content:""; position:absolute; inset:0; transform:skewX(-22deg) translateX(-120%);
-   background: linear-gradient(90deg, transparent, rgba(255,255,255,.18), transparent);
-   animation: shine 2.8s linear infinite;
- }
- @keyframes shine{ to{ transform:skewX(-22deg) translateX(120%)}}
+   h1 {
+     text-align: center;
+     color: #2c3e50;
+   }
+   .level {
+     background: #fff;
+     margin: 20px auto;
+     padding: 20px;
+     border-radius: 8px;
+     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+     max-width: 800px;
+   }
+   .level h2 {
+     color: #3498db;
+     border-bottom: 2px solid #3498db;
+     padding-bottom: 5px;
+   }
+   .email {
+     background: #ecf0f1;
+     padding: 15px;
+     margin: 15px 0;
+     border-radius: 6px;
+   }
+   .email strong {
+     color: #2c3e50;
+   }
+   @media (max-width: 600px) {
+     body { font-size: 18px; }
+   }
 </style>
 </head>
 <body>
-<header>
-<div class="halo"></div>
-<h1 class="title">إيميل تجريبي بتصميم خرافي</h1>
-<p class="subtitle">نموذج احترافي + ترجمة + أزرار نسخ وإخفاء/إظهار الترجمة – جاهز للجوال والكمبيوتر</p>
-</header>
-<main>
-<div class="card">
-<div class="row">
-<span class="badge shine">A1 · غير رسمي (لصديق)</span>
-<div class="actions">
-<button id="copyDe">نسخ الألماني</button>
-<button id="toggleTr">إظهار/إخفاء الترجمة</button>
-<button id="printPg">طباعة/حفظ PDF</button>
+<h1>📧 مجموعة الإيميلات حسب المستويات</h1>
+<!-- المستوى الأول A1 -->
+<div class="level">
+<h2>مستوى A1</h2>
+<div class="email">
+<strong>الإيميل 1 (A1):</strong><br><br>
+     Hallo Jakob,<br>
+     ich habe gehört, dass du bald deine Spanischprüfung machst. Das ist toll!
+     Bist du nervös? Was musst du da denn genau machen?<br><br>
+     Viele Grüße<br>
+     Max<br><br>
+<em>الترجمة:</em><br>
+     مرحبًا يا ياكوب،  
+     سمعت أنك ستجري قريبًا امتحان اللغة الإسبانية. هذا رائع! هل أنت متوتر؟  
+     مع تحياتي، ماكس.
+</div>
+<div class="email">
+<strong>الإيميل 2 (A1):</strong><br><br>
+     Guten Tag,<br>
+     ich möchte einen Termin beim Zahnarzt vereinbaren. Haben Sie nächste Woche Zeit?<br><br>
+     Mit freundlichen Grüßen<br>
+     Ali<br><br>
+<em>الترجمة:</em><br>
+     طاب يومك،  
+     أود تحديد موعد عند طبيب الأسنان. هل لديكم وقت الأسبوع القادم؟  
+     مع فائق الاحترام، علي.
 </div>
 </div>
-<div class="grid">
-<section class="panel de" id="dePanel">
-<h3 class="block-title">Deutsch (الألمانية)</h3>
-<p class="content" id="deText">
-Hallo Jakob,
-ich hoffe, es geht dir gut und du hast eine entspannte Woche. Ich wollte dir kurz schreiben, weil wir uns am Samstag treffen möchten. Wir planen, im Stadtpark ein kleines Picknick zu machen. Jeder bringt etwas mit: ich bringe Brot, Käse und Saft. Kannst du vielleicht Obst oder Kekse mitbringen? Treffpunkt ist um 15:00 Uhr am großen Brunnen. Wenn es regnet, gehen wir ins Café neben dem Park. Sag mir bitte heute Abend Bescheid, ob die Zeit passt. Ich freue mich sehr, dich zu sehen!
-Viele Grüße
-Max
-</p>
-</section>
-<section class="panel ar" id="trPanel">
-<h3 class="block-title">الترجمة العربية</h3>
-<p class="content" id="arText">
-مرحبًا يا ياكوب،
-آمل أن تكون بخير وأن تكون أسبوعك مريحًا. أردت أن أكتب لك بسرعة لأننا نود أن نلتقي يوم السبت. نخطط لعمل نزهة صغيرة في حديقة المدينة. كل واحد يجلب شيئًا: سأجلب الخبز والجبن والعصير. هل يمكنك إحضار الفاكهة أو البسكويت؟ موعدنا الساعة 15:00 عند النافورة الكبيرة. إذا هطل المطر، سنذهب إلى المقهى بجانب الحديقة. من فضلك أخبرني هذا المساء إذا كان الوقت مناسبًا. أنا متحمس جدًا لرؤيتك!
-أطيب التحيات
-ماكس
-</p>
-</section>
-<section class="panel ar">
-<h3 class="block-title">سبب كتابة الإيميل</h3>
-<ul class="reasons">
-<li>دعوة صديق للقاء غير رسمي (نزهة في الحديقة).</li>
-<li>تأكيد الوقت والمكان وخطة بديلة عند المطر.</li>
-<li>طلب إحضار شيء محدد (فاكهة/بسكويت).</li>
-</ul>
-</section>
+<!-- المستوى الثاني A2 -->
+<div class="level">
+<h2>مستوى A2</h2>
+<p>هنا توضع الإيميلات الخاصة بالمستوى A2.</p>
 </div>
-</div>
-<footer>نموذج قابل للتوسّع — انسخ هذا الصندوق وعدّل النصوص لعمل المزيد من الإيميلات.</footer>
-</main>
-<script>
- // زر النسخ
- document.getElementById('copyDe').addEventListener('click', async () => {
-   try{
-     const text = document.getElementById('deText').innerText.trim();
-     await navigator.clipboard.writeText(text);
-     flash('تم نسخ النص الألماني ✅');
-   }catch(e){
-     flash('لم يتم النسخ — يسمح المتصفح بالنسخ من صفحات HTTPS فقط.');
-   }
- });
- // إظهار/إخفاء الترجمة
- const trPanel = document.getElementById('trPanel');
- let shown = true;
- document.getElementById('toggleTr').addEventListener('click', () => {
-   shown = !shown;
-   trPanel.style.display = shown ? 'block' : 'none';
- });
- // طباعة / PDF
- document.getElementById('printPg').addEventListener('click', () => window.print());
- // إشعار صغير أعلى الصفحة
- function flash(msg){
-   const n = document.createElement('div');
-   n.textContent = msg;
-   n.style.cssText = `
-     position:fixed; inset:auto 50% 24px auto; transform:translateX(50%);
-     background:linear-gradient(90deg, var(--acc1), var(--acc2));
-     color:#fff; padding:10px 14px; border-radius:999px; z-index:9999;
-     box-shadow:0 6px 20px rgba(0,0,0,.25); font-weight:700;
-   `;
-   document.body.appendChild(n);
-   setTimeout(()=>{ n.style.opacity='0'; n.style.transition='opacity .4s'; }, 1400);
-   setTimeout(()=> n.remove(), 1900);
- }
-</script>
+<!-- باقي المستويات -->
+<div class="level"><h2>مستوى B1</h2><p>إيميلات B1...</p></div>
+<div class="level"><h2>مستوى B2</h2><p>إيميلات B2...</p></div>
+<div class="level"><h2>مستوى C1</h2><p>إيميلات C1...</p></div>
+<div class="level"><h2>مستوى C2</h2><p>إيميلات C2...</p></div>
 </body>
 </html>
