--- a/a1_emails.html
+++ b/a1_emails.html
@@ -3,84 +3,163 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📧 الإيميلات - تعلم الألمانية</title>
+<title>📧 إيميلات ألمانية مترجمة</title>
 <style>
    body {
      font-family: Arial, sans-serif;
-     background: #f4f6f9;
-     margin: 0;
-     padding: 20px;
      line-height: 1.8;
+     margin: 0;
+     padding: 0;
+     background: #f5f6fa;
+     direction: rtl;
    }
-   h1 {
-     text-align: center;
-     color: #2c3e50;
-   }
-   .level {
-     background: #fff;
-     margin: 20px auto;
+   header {
+     background: #2d3436;
+     color: white;
      padding: 20px;
-     border-radius: 8px;
-     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-     max-width: 800px;
+     text-align: center;
+     font-size: 22px;
    }
-   .level h2 {
-     color: #3498db;
-     border-bottom: 2px solid #3498db;
-     padding-bottom: 5px;
+   .accordion {
+     background: #0984e3;
+     color: white;
+     cursor: pointer;
+     padding: 15px;
+     width: 100%;
+     border: none;
+     text-align: right;
+     outline: none;
+     font-size: 18px;
+     transition: 0.4s;
+     margin-top: 5px;
    }
-   .email {
-     background: #ecf0f1;
+   .active, .accordion:hover {
+     background: #74b9ff;
+   }
+   .panel {
+     padding: 0 20px;
+     display: none;
+     background: white;
+     overflow: hidden;
+     border: 1px solid #dcdde1;
+   }
+   .email-box {
+     background: #f1f2f6;
      padding: 15px;
      margin: 15px 0;
-     border-radius: 6px;
+     border-radius: 8px;
+     border: 1px solid #dcdde1;
    }
-   .email strong {
-     color: #2c3e50;
+   .email-title {
+     font-weight: bold;
+     margin-bottom: 10px;
+     color: #2d3436;
    }
-   @media (max-width: 600px) {
-     body { font-size: 18px; }
+   .german {
+     color: #0984e3;
+     font-size: 17px;
+     white-space: pre-line;
+   }
+   .arabic {
+     color: #2d3436;
+     font-size: 16px;
+     margin-top: 8px;
+     white-space: pre-line;
+   }
+   .reason {
+     font-size: 14px;
+     color: #636e72;
+     margin-top: 6px;
    }
 </style>
 </head>
 <body>
-<h1>📧 مجموعة الإيميلات حسب المستويات</h1>
-<!-- المستوى الأول A1 -->
-<div class="level">
-<h2>مستوى A1</h2>
-<div class="email">
-<strong>الإيميل 1 (A1):</strong><br><br>
-     Hallo Jakob,<br>
-     ich habe gehört, dass du bald deine Spanischprüfung machst. Das ist toll!
-     Bist du nervös? Was musst du da denn genau machen?<br><br>
-     Viele Grüße<br>
-     Max<br><br>
-<em>الترجمة:</em><br>
-     مرحبًا يا ياكوب،  
-     سمعت أنك ستجري قريبًا امتحان اللغة الإسبانية. هذا رائع! هل أنت متوتر؟  
-     مع تحياتي، ماكس.
+<header>📧 إيميلات ألمانية مترجمة – مستوى A1</header>
+<!-- A1 Section -->
+<button class="accordion">📘 مستوى A1 (30 إيميل)</button>
+<div class="panel">
+<!-- Email 1 -->
+<div class="email-box">
+<div class="email-title">✉️ إيميل 1</div>
+<div class="german">
+       Hallo Peter,  
+       wie geht es dir? Ich hoffe, es geht dir gut. Ich schreibe dir, weil ich dich nächste Woche besuchen möchte. Hast du am Samstag Zeit? Wir können zusammen Kaffee trinken und spazieren gehen. Bitte sag mir, ob es dir passt.  
+       Viele Grüße  
+       Anna
 </div>
-<div class="email">
-<strong>الإيميل 2 (A1):</strong><br><br>
-     Guten Tag,<br>
-     ich möchte einen Termin beim Zahnarzt vereinbaren. Haben Sie nächste Woche Zeit?<br><br>
-     Mit freundlichen Grüßen<br>
-     Ali<br><br>
-<em>الترجمة:</em><br>
-     طاب يومك،  
-     أود تحديد موعد عند طبيب الأسنان. هل لديكم وقت الأسبوع القادم؟  
-     مع فائق الاحترام، علي.
+<div class="arabic">
+       مرحبًا بيتر،  
+       كيف حالك؟ أتمنى أن تكون بخير. أكتب لك لأنني أود زيارتك الأسبوع القادم. هل لديك وقت يوم السبت؟ يمكننا شرب القهوة معًا والذهاب في نزهة. من فضلك أخبرني إذا كان يناسبك.  
+       مع أطيب التحيات  
+       آنا
+</div>
+<div class="reason">
+       📌 سبب الكتابة:  
+       - السؤال عن الحال  
+       - اقتراح لقاء  
+       - تحديد موعد  
+       - انتظار الرد
 </div>
 </div>
-<!-- المستوى الثاني A2 -->
-<div class="level">
-<h2>مستوى A2</h2>
-<p>هنا توضع الإيميلات الخاصة بالمستوى A2.</p>
+<!-- Email 2 -->
+<div class="email-box">
+<div class="email-title">✉️ إيميل 2</div>
+<div class="german">
+       Liebe Maria,  
+       danke für deine Einladung zu deiner Geburtstagsparty. Ich freue mich sehr darauf. Soll ich etwas mitbringen? Vielleicht einen Kuchen oder Getränke? Bitte sag mir, was du brauchst. Ich komme am Freitag um 18 Uhr.  
+       Herzliche Grüße  
+       Thomas
 </div>
-<!-- باقي المستويات -->
-<div class="level"><h2>مستوى B1</h2><p>إيميلات B1...</p></div>
-<div class="level"><h2>مستوى B2</h2><p>إيميلات B2...</p></div>
-<div class="level"><h2>مستوى C1</h2><p>إيميلات C1...</p></div>
-<div class="level"><h2>مستوى C2</h2><p>إيميلات C2...</p></div>
+<div class="arabic">
+       عزيزتي ماريا،  
+       شكرًا لدعوتك إلى حفلة عيد ميلادك. أنا متحمس جدًا لذلك. هل يجب أن أحضر شيئًا؟ ربما كعكة أو مشروبات؟ من فضلك قولي لي ما تحتاجينه. سأصل يوم الجمعة الساعة 6 مساءً.  
+       أطيب التحيات  
+       توماس
+</div>
+<div class="reason">
+       📌 سبب الكتابة:  
+       - شكر على الدعوة  
+       - عرض المساعدة  
+       - تحديد الموعد
+</div>
+</div>
+<!-- Email 3 … Email 30 (نفس النمط) -->
+<div class="email-box">
+<div class="email-title">✉️ إيميل 3</div>
+<div class="german">
+       Hallo Julia,  
+       ich möchte dir sagen, dass ich morgen nicht zur Schule kommen kann. Ich habe einen Arzttermin und muss den ganzen Vormittag dort bleiben. Kannst du mir bitte die Hausaufgaben schicken? Das wäre sehr nett von dir.  
+       Viele Grüße  
+       Max
+</div>
+<div class="arabic">
+       مرحبًا جوليا،  
+       أريد أن أخبرك أنني لن أستطيع الحضور إلى المدرسة غدًا. لدي موعد عند الطبيب ويجب أن أبقى هناك طوال الصباح. هل يمكنك أن ترسلي لي الواجبات المنزلية من فضلك؟ سيكون ذلك لطفًا منك.  
+       مع تحياتي  
+       ماكس
+</div>
+<div class="reason">
+       📌 سبب الكتابة:  
+       - إعلام بعدم الحضور  
+       - الاعتذار  
+       - طلب مساعدة
+</div>
+</div>
+<!-- ✨ سنكمل بنفس النمط حتى 30 إيميل لمستوى A1 -->
+</div>
+<script>
+   var acc = document.getElementsByClassName("accordion");
+   for (var i = 0; i < acc.length; i++) {
+     acc[i].addEventListener("click", function() {
+       this.classList.toggle("active");
+       var panel = this.nextElementSibling;
+       if (panel.style.display === "block") {
+         panel.style.display = "none";
+       } else {
+         panel.style.display = "block";
+       }
+     });
+   }
+</script>
 </body>
 </html>
