--- a/a1_emails.html
+++ b/a1_emails.html
@@ -163,3 +163,104 @@
 </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>A1 Emails</title>
+<style>
+   body {
+     font-family: Arial, sans-serif;
+     background: #f9f9f9;
+     margin: 0;
+     padding: 0;
+     line-height: 1.8;
+   }
+   header {
+     background: #4CAF50;
+     color: white;
+     text-align: center;
+     padding: 15px;
+     font-size: 1.8em;
+   }
+   .email {
+     background: white;
+     margin: 15px auto;
+     padding: 20px;
+     border-radius: 8px;
+     max-width: 800px;
+     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+   }
+   .reason {
+     font-weight: bold;
+     color: #333;
+     margin-bottom: 10px;
+   }
+   .german {
+     background: #eef7ff;
+     padding: 10px;
+     border-radius: 5px;
+     margin-bottom: 10px;
+     white-space: pre-line;
+   }
+   .arabic {
+     background: #fff8e1;
+     padding: 10px;
+     border-radius: 5px;
+     direction: rtl;
+     text-align: right;
+     white-space: pre-line;
+   }
+</style>
+</head>
+<body>
+<header>📧 إيميلات المستوى A1</header>
+<div class="email">
+<div class="reason">✍️ سبب الكتابة: دعوة صديق لحفلة عيد ميلاد</div>
+<div class="german">
+     Hallo Maria,  
+     ich möchte dich zu meiner Geburtstagsfeier am Samstag einladen. Die Feier beginnt um 18 Uhr bei mir zu Hause. Es wird Essen, Getränke und Musik geben. Ich freue mich, wenn du kommst. Bitte sag mir Bescheid, ob du Zeit hast. Es wird bestimmt ein schöner Abend mit vielen Freunden. Bring gerne gute Laune mit! Ich hoffe, du kannst kommen. Bis bald!  
+     Viele Grüße  
+     Anna
+</div>
+<div class="arabic">
+     مرحباً ماريا،  
+     أود أن أدعوك إلى حفلة عيد ميلادي يوم السبت. ستبدأ الحفلة في الساعة السادسة مساءً في بيتي. سيكون هناك طعام، مشروبات وموسيقى. سأكون سعيدة إذا حضرتِ. من فضلك أخبريني إذا كان لديك وقت. سيكون بالتأكيد مساءً جميلاً مع الكثير من الأصدقاء. أحضري معك روحاً مرحة! آمل أن تتمكني من الحضور. إلى اللقاء!  
+     تحياتي  
+     آنا
+</div>
+</div>
+<div class="email">
+<div class="reason">✍️ سبب الكتابة: الاعتذار عن عدم الحضور</div>
+<div class="german">
+     Hallo Thomas,  
+     vielen Dank für deine Einladung zum Abendessen. Leider kann ich am Freitag nicht kommen, weil ich arbeiten muss. Es tut mir sehr leid. Ich hoffe, wir können uns bald an einem anderen Tag treffen. Vielleicht nächste Woche? Ich freue mich darauf, dich bald wiederzusehen.  
+     Viele Grüße  
+     Peter
+</div>
+<div class="arabic">
+     مرحباً توماس،  
+     شكراً جزيلاً على دعوتك للعشاء. للأسف لا أستطيع الحضور يوم الجمعة لأن عليّ أن أعمل. أنا آسف جداً. آمل أن نتمكن من اللقاء قريباً في يوم آخر. ربما الأسبوع القادم؟ أتطلع إلى رؤيتك قريباً.  
+     تحياتي  
+     بيتر
+</div>
+</div>
+<div class="email">
+<div class="reason">✍️ سبب الكتابة: تهنئة صديق بالنجاح</div>
+<div class="german">
+     Liebe Julia,  
+     herzlichen Glückwunsch zu deiner Prüfung! Ich habe gehört, dass du sehr gute Noten bekommen hast. Ich freue mich so sehr für dich. Du hast viel gelernt und jetzt siehst du, dass es sich gelohnt hat. Bald sollten wir feiern! Hast du am Wochenende Zeit? Ich lade dich gern auf einen Kaffee ein.  
+     Liebe Grüße  
+     Laura
+</div>
+<div class="arabic">
+     عزيزتي جوليا،  
+     ألف مبروك على نجاحك في الامتحان! سمعت أنك حصلتِ على درجات جيدة جداً. أنا سعيدة جداً من أجلك. لقد درستِ كثيراً، والآن ترين أن الجهد قد أثمر. يجب أن نحتفل قريباً! هل لديك وقت في عطلة نهاية الأسبوع؟ سأدعوكي بكل سرور على فنجان قهوة.  
+     مع تحياتي  
+     لورا
+</div>
+</div>
+<!-- باقي الإيميلات 4-10 أضيفها هنا بنفس التصميم -->
+</body>
+</html>
